--- a/rna/snakemake/config_ricard_local.yaml
+++ b/rna/snakemake/config_ricard_local.yaml
@@ -11,6 +11,19 @@ samples:
     - E8.5_TET_TKO_KDR+_rep1
     - E8.5_TET_TKO_KDR+_rep2
 
+plates:
+    - E7.5_tet_chimera_plate3
+    - E7.5_tet_crispr_plate5
+    - E7.5_tet_crispr_plate6
+    - E8.5_oct20_plate1
+    - E8.5_oct20_plate7
+    - E8.5_oct20_plate5
+    - E8.5_oct20_plate3
+    - E8.5_oct20_plate4
+    - E8.5_oct20_plate6
+    - E8.5_oct20_plate2
+    - E8.5_oct20_plate8
+
 #################
 ## Directories ##
 #################
@@ -43,7 +56,7 @@ scripts:
     mapping_mnn: ../mapping/run/mnn/mapping_mnn.R
     mapping_seurat: ../mapping/run/seurat/mapping_seurat.R
     parse_mapping: ../mapping/run/parse_sample_metadata_after_mapping.R
-    dimensionality_reduction: ../dimensionality_reduction/dimensionality_reduction_sce.R
+    dimensionality_reduction_sce: ../dimensionality_reduction/dimensionality_reduction_sce.R
     dimensionality_reduction_seurat: ../dimensionality_reduction/dimensionality_reduction_seurat.R
     pseudobulk_rna: ../pseudobulk/pseudobulk_rna.R
     # celltype_validation_single_cells: ../celltype_validation/celltype_validation_single_cells.R
@@ -76,11 +89,12 @@ qc:
     percent_mt: 10
     percent_rib: 20
     
-dimensionality_reduction:
+dimensionality_reduction_sce:
     npcs: 30
     features: 1000
     n_neighbors: 25
     min_dist: 0.3
+    vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
     colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
 
 dimensionality_reduction_seurat:
@@ -89,7 +103,7 @@ dimensionality_reduction_seurat:
     n_neighbors: 25
     min_dist: 0.3
     seed: 42
-    vars_to_regress: ["nFeature_RNA","mitochondrial_percent_RNA"]
+    vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
     colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
 
 # celltype_validation_single_cells:
@@ -101,9 +115,8 @@ dimensionality_reduction_seurat:
 #     celltype_label: "celltype.mapped_seurat"
 
 plot_celltype_proportions:
-    celltype_label: "celltype.mapped_seurat"
+    celltype_label: "celltype.mapped_mnn"
     # celltype_label: ["celltype.mapped_seurat","celltype.mapped_mnn"]
-
 
 # plot_mapping_results
 
@@ -111,44 +124,52 @@ plot_celltype_proportions:
 ## Slurm ##
 ###########
 
-slurm:  # memory in GB
+slurm:  # memory in MB
     create_seurat: 
-        memory: 10
+        memory: 5000
         threads: 1
     qc: 
-        memory: 2
+        memory: 2000
         threads: 1
     seurat_to_sce:
-        memory: 12
+        memory: 5000
         threads: 1
     pseudobulk_rna:
-        memory: 10
+        memory: 5000
         threads: 1
     mapping_mnn:
-        memory: 30
+        memory: 30000
+        threads: 1
+    mapping_mnn_all_samples:
+        memory: 30000
         threads: 1
     mapping_seurat:
-        memory: 100
+        memory: 90000
+        threads: 1
+    mapping_seurat_all_samples:
+        memory: 90000
         threads: 1
     parse_mapping_results:
-        memory: 2
+        memory: 2000
         threads: 1
-    dimensionality_reduction:
-        memory: 10
+    dimensionality_reduction_sce:
+        memory: 20000
         threads: 1
     dimensionality_reduction_seurat:
-        memory: 10
+        memory: 10000
         threads: 1
-    celltype_validation_single_cells:
-        memory: 5
-        threads: 1
-    celltype_validation_pseudobulk:
-        memory: 2
-        threads: 1
+    # celltype_validation_single_cells:
+    #     memory: 15000
+    #     threads: 1
+    # celltype_validation_pseudobulk:
+    #     memory: 3000
+    #     threads: 1
     plot_mapping_results:
-        memory: 2
+        memory: 3000
         threads: 1
     plot_celltype_proportions:
-        memory: 2
+        memory: 3000
         threads: 1
 
+
+        
