--- a/rna/snakemake/config_ricard_babraham.yaml
+++ b/rna/snakemake/config_ricard_babraham.yaml
@@ -11,6 +11,19 @@ samples:
     - E8.5_TET_TKO_KDR+_rep1
     - E8.5_TET_TKO_KDR+_rep2
 
+plates:
+    - E7.5_tet_chimera_plate3
+    - E7.5_tet_crispr_plate5
+    - E7.5_tet_crispr_plate6
+    - E8.5_oct20_plate1
+    - E8.5_oct20_plate7
+    - E8.5_oct20_plate5
+    - E8.5_oct20_plate3
+    - E8.5_oct20_plate4
+    - E8.5_oct20_plate6
+    - E8.5_oct20_plate2
+    - E8.5_oct20_plate8
+    
 #################
 ## Directories ##
 #################
