--- a/rna/snakemake/config_ricard_babraham.yaml
+++ b/rna/snakemake/config_ricard_babraham.yaml
@@ -44,7 +44,7 @@ resources:
     umap: "/bi/group/reik/ricard/data/tet_chimera_nmtseq/results_new/rna/dimensionality_reduction/umap_features1000_pcs30_neigh25_dist0.3.txt.gz"
     celltypes: ["Epiblast", "Primitive_Streak", "Caudal_epiblast", "PGC", "Anterior_Primitive_Streak", "Notochord", "Def._endoderm", "Gut", "Nascent_mesoderm", "Mixed_mesoderm", "Intermediate_mesoderm", "Caudal_Mesoderm", "Paraxial_mesoderm", "Somitic_mesoderm", "Pharyngeal_mesoderm", "Cardiomyocytes", "Allantois", "ExE_mesoderm", "Mesenchyme", "Haematoendothelial_progenitors", "Endothelium", "Blood_progenitors_1", "Blood_progenitors_2", "Erythroid1", "Erythroid2", "Erythroid3", "NMP", "Rostral_neurectoderm", "Caudal_neurectoderm", "Neural_crest", "Forebrain_Midbrain_Hindbrain", "Spinal_cord", "Surface_ectoderm", "Visceral_endoderm", "ExE_endoderm", "ExE_ectoderm", "Parietal_endoderm"]
     stages: ["E7.5","E8.5"]
-    # TFs_file: "/bi/group/reik/ricard/data/mm10_regulation/TFs/TFs.txt"
+    gene_metadata: /bi/group/reik/ricard/data/tet_chimera_nmtseq/features/gene_metadata/Mmusculus_genes_BioMart.87.txt
 
 #############
 ## Scripts ##
@@ -70,56 +70,57 @@ scripts:
 ## Parameters ##
 ################
 
-pseudobulk_rna:
-    group_by: ["celltype.mapped_mnn", "celltype.mapped_seurat"]
-    normalisation_method: "cpm"
-    
-mapping_mnn:
-    atlas_stages: ["E6.5","E6.75","E7.0","E7.25","E7.5","E7.75","E8.0","E8.25","E8.5"]
-    npcs: 50
-    n_neighbours: 25
+params:
+    pseudobulk_rna:
+        group_by: ["celltype.mapped_mnn", "celltype.mapped_seurat"]
+        normalisation_method: "cpm"
+        
+    mapping_mnn:
+        atlas_stages: ["E6.5","E6.75","E7.0","E7.25","E7.5","E7.75","E8.0","E8.25","E8.5"]
+        npcs: 50
+        n_neighbours: 25
 
-mapping_seurat:
-    atlas_stages: ["E6.5","E6.75","E7.0","E7.25","E7.5","E7.75","E8.0","E8.25","E8.5"]
-    npcs: 50
-    n_neighbours: 25
+    mapping_seurat:
+        atlas_stages: ["E6.5","E6.75","E7.0","E7.25","E7.5","E7.75","E8.0","E8.25","E8.5"]
+        npcs: 50
+        n_neighbours: 25
 
-qc:
-    min_nFeature_RNA: 4000
-    max_nFeature_RNA: 10000
-    percent_mt: 10
-    percent_rib: 20
-    
-dimensionality_reduction_sce:
-    npcs: 30
-    features: 1000
-    n_neighbors: 25
-    min_dist: 0.3
-    vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
-    colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
+    qc:
+        min_nFeature_RNA: 4000
+        max_nFeature_RNA: 10000
+        percent_mt: 10
+        percent_rib: 20
+        
+    dimensionality_reduction_sce:
+        npcs: 30
+        features: 1000
+        n_neighbors: 25
+        min_dist: 0.3
+        vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
+        colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
 
-dimensionality_reduction_seurat:
-    npcs: 30
-    features: 1000
-    n_neighbors: 25
-    min_dist: 0.3
-    seed: 42
-    vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
-    colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
+    dimensionality_reduction_seurat:
+        npcs: 30
+        features: 1000
+        n_neighbors: 25
+        min_dist: 0.3
+        seed: 42
+        vars_to_regress: ["nFeature_RNA","mit_percent_RNA"]
+        colour_by: ["plate", "celltype.mapped_mnn", "celltype.mapped_seurat"]
 
-# celltype_validation_single_cells:
-#     umap: "..."
-#     celltype_label: "celltype.mapped_seurat"
+    # celltype_validation_single_cells:
+    #     umap: "..."
+    #     celltype_label: "celltype.mapped_seurat"
 
-# celltype_validation_pseudobulk:
-#     umap: "..."
-#     celltype_label: "celltype.mapped_seurat"
+    # celltype_validation_pseudobulk:
+    #     umap: "..."
+    #     celltype_label: "celltype.mapped_seurat"
 
-plot_celltype_proportions:
-    celltype_label: "celltype.mapped_mnn"
-    # celltype_label: ["celltype.mapped_seurat","celltype.mapped_mnn"]
+    plot_celltype_proportions:
+        celltype_label: "celltype.mapped_mnn"
+        # celltype_label: ["celltype.mapped_seurat","celltype.mapped_mnn"]
 
-# plot_mapping_results
+    # plot_mapping_results
 
 ###########
 ## Slurm ##
@@ -127,34 +128,28 @@ plot_celltype_proportions:
 
 slurm:  # memory in MB
     create_seurat: 
-        memory: 50000
+        memory: 5000
         threads: 1
     qc: 
-        memory: 3000
-        threads: 1
-    seurat_to_sce:
-        memory: 50000
-        threads: 1
-    doublet_detection:
-        memory: 25000
-        threads: 1
-    parse_doublet_results:
         memory: 2000
         threads: 1
+    seurat_to_sce:
+        memory: 5000
+        threads: 1
     pseudobulk_rna:
-        memory: 15000
+        memory: 5000
         threads: 1
     mapping_mnn:
-        memory: 50000
+        memory: 30000
         threads: 1
     mapping_mnn_all_samples:
-        memory: 50000
+        memory: 30000
         threads: 1
     mapping_seurat:
-        memory: 150000
+        memory: 90000
         threads: 1
     mapping_seurat_all_samples:
-        memory: 150000
+        memory: 90000
         threads: 1
     parse_mapping_results:
         memory: 2000
@@ -163,32 +158,18 @@ slurm:  # memory in MB
         memory: 20000
         threads: 1
     dimensionality_reduction_seurat:
-        memory: 50000
+        memory: 10000
         threads: 1
-    celltype_validation_single_cells:
-        memory: 15000
-        threads: 1
-    celltype_validation_pseudobulk:
-        memory: 3000
-        threads: 1
+    # celltype_validation_single_cells:
+    #     memory: 15000
+    #     threads: 1
+    # celltype_validation_pseudobulk:
+    #     memory: 3000
+    #     threads: 1
     plot_mapping_results:
         memory: 3000
         threads: 1
     plot_celltype_proportions:
         memory: 3000
         threads: 1
-    infer_trajectories:
-        memory: 10000
-        threads: 1
-    coexpression_TF_vs_gene_single_cells:
-        memory: 35000
-        threads: 1
-    coexpression_TF_vs_gene_single_cells_denoised:
-        memory: 150000
-        threads: 1
-    coexpression_TF_vs_gene_pseudobulk:
-        memory: 5000
-        threads: 1
 
-
-        
