--- a/rna/snakemake/Snakefile
+++ b/rna/snakemake/Snakefile
@@ -28,21 +28,17 @@ rule all:
     input: 
         config["directories"]["processed_data"]+"/seurat.rds",
         config["directories"]["results"]+"/rna/qc/sample_metadata_after_qc.txt.gz",
-        config["directories"]["processed_data"]+"/SingleCellExperiment.rds"
-        # expand("%s/rna/mapping/mapping_mnn_all_samples.txt.gz" % config["directories"]["results"]),
+        config["directories"]["processed_data"]+"/SingleCellExperiment.rds",
+        expand("%s/rna/mapping/mapping_mnn_{plate}.txt.gz" % config["directories"]["results"], plate=config["plates"]),
+        expand("%s/rna/mapping/mapping_mnn_all_samples.txt.gz" % config["directories"]["results"]),
+        # expand("%s/rna/mapping/mapping_seurat_{plate}.txt.gz" % config["directories"]["results"], plate=config["plates"]),
         # expand("%s/rna/mapping/mapping_seurat_all_samples.txt.gz" % config["directories"]["results"]),
-        # expand("%s/rna/mapping/mapping_mnn_{plate}.txt.gz" % config["directories"]["results"], plate=config["plates"]),
-        # expand("%s/rna/mapping/mapping_seurat_{plate}.txt.gz" % config["directories"]["results"], plate=config["plates"]),
-        # expand("%s/rna/mapping/mapping_seurat_{plate}.txt.gz" % config["directories"]["results"], plate=config["plates"]),
-        # config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping.txt.gz",
-        # config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping_all_samples.txt.gz",
-        # expand("%s/rna/mapping/pdf/umap_mapped_allcells.pdf" % config["directories"]["results"])
+        config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping.txt.gz",
+        config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping_all_samples.txt.gz",
+        expand("%s/rna/mapping/pdf/umap_mapped_allcells.pdf" % config["directories"]["results"]),
         # expand("%s/rna/celltype_proportions/celltype_proportions_{sample}_horizontal_barplots.pdf" % config["directories"]["results"], stage=config["plates"]),
-
-        # expand("%s/rna/pseudobulk/SingleCellExperiment_pseudobulk_{group_by}.rds" % config["directories"]["results"], 
-        #     group_by=config["pseudobulk_rna"]["group_by"]),
-        # expand("%s/rna/pseudobulk/Seurat_pseudobulk_{group_by}.rds" % config["directories"]["results"], 
-        #     group_by=config["pseudobulk_rna"]["group_by"])
+        expand("%s/rna/pseudobulk/SingleCellExperiment_pseudobulk_{group_by}.rds" % config["directories"]["results"], group_by=config["params"]["pseudobulk_rna"]["group_by"]),
+        expand("%s/rna/pseudobulk/Seurat_pseudobulk_{group_by}.rds" % config["directories"]["results"], group_by=config["params"]["pseudobulk_rna"]["group_by"])
         
 ##################################################
 ## Load count matrices and create Seurat object ##
@@ -242,10 +238,8 @@ rule mapping_seurat_all_samples:
 rule parse_mapping_results:
     input:
         query_metadata = rules.qc.output,
-        mapping_seurat = expand(config["directories"]["results"]+"/rna/mapping/mapping_seurat_{plate}.txt.gz", plate=config["plates"]),
-        mapping_mnn = expand(config["directories"]["results"]+"/rna/mapping/mapping_mnn_{plate}.txt.gz", plate=config["plates"]),
-        # mapping_seurat = rules.mapping_seurat.output,
-        # mapping_mnn = rules.mapping_mnn.output,
+        # mapping_seurat = expand(rules.mapping_seurat.output, plate=config["plates"]),
+        mapping_mnn = expand(rules.mapping_mnn.output, plate=config["plates"]),
         script = config["scripts"]["parse_mapping"]
     output:
         config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping.txt.gz"
@@ -258,15 +252,13 @@ rule parse_mapping_results:
     resources:
         mem_mb = config["slurm"]["parse_mapping_results"]["memory"]
     shell:
-        "Rscript {input.script} --metadata {input.query_metadata} --mapping_seurat {input.mapping_seurat} --mapping_mnn {input.mapping_mnn} --outfile {output} > {log}"
+        "Rscript {input.script} --metadata {input.query_metadata} --mapping_mnn {input.mapping_mnn} --outfile {output} > {log}" #  --mapping_seurat {input.mapping_seurat}
 
 
 rule parse_mapping_results_all_samples:
     input:
         query_metadata = rules.qc.output,
-        # mapping_seurat = config["directories"]["results"]+"/rna/mapping/mapping_seurat_all_samples.txt.gz",
-        # mapping_mnn = config["directories"]["results"]+"/rna/mapping/mapping_mnn_all_samples.txt.gz",
-        mapping_seurat = rules.mapping_seurat_all_samples.output,
+        # mapping_seurat = rules.mapping_seurat_all_samples.output,
         mapping_mnn = rules.mapping_mnn_all_samples.output,
         script = config["scripts"]["parse_mapping"]
     output:
@@ -280,7 +272,7 @@ rule parse_mapping_results_all_samples:
     resources:
         mem_mb = config["slurm"]["parse_mapping_results"]["memory"]
     shell:
-        "Rscript {input.script} --metadata {input.query_metadata} --mapping_seurat {input.mapping_seurat} --mapping_mnn {input.mapping_mnn} --outfile {output} > {log}"
+        "Rscript {input.script} --metadata {input.query_metadata} --mapping_mnn {input.mapping_mnn} --outfile {output} > {log}" # --mapping_seurat {input.mapping_seurat}
 
 ##############################
 ## Dimensionality reduction ##
