--- a/rna/snakemake/Snakefile
+++ b/rna/snakemake/Snakefile
@@ -36,7 +36,7 @@ rule all:
         config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping.txt.gz",
         config["directories"]["results"]+"/rna/mapping/sample_metadata_after_mapping_all_samples.txt.gz",
         expand("%s/rna/mapping/pdf/umap_mapped_allcells.pdf" % config["directories"]["results"]),
-        # expand("%s/rna/celltype_proportions/celltype_proportions_{sample}_horizontal_barplots.pdf" % config["directories"]["results"], stage=config["plates"]),
+        expand("%s/rna/celltype_proportions/celltype_proportions_{sample}_horizontal_barplots.pdf" % config["directories"]["results"], sample=config["samples"]),
         expand("%s/rna/pseudobulk/SingleCellExperiment_pseudobulk_{group_by}.rds" % config["directories"]["results"], group_by=config["params"]["pseudobulk_rna"]["group_by"]),
         expand("%s/rna/pseudobulk/Seurat_pseudobulk_{group_by}.rds" % config["directories"]["results"], group_by=config["params"]["pseudobulk_rna"]["group_by"])
         
@@ -456,24 +456,24 @@ rule plot_mapping_results:
 ## Plot cell type proportions ##
 ################################
 
-# rule plot_celltype_proportions: 
-#     input:
-#         script = config["scripts"]["plot_celltype_proportions"],
-#         metadata=rules.parse_mapping_results.output
-#     output:
-#         expand(config["directories"]["results"]+"/rna/celltype_proportions/celltype_proportions_{sample}_horizontal_barplots.pdf", stage=config["samples"])
-#     params:
-#         plates = expand("{plate}", plate=config["plates"]),
-#         celltype_label = config["params"]["plot_celltype_proportions"]["celltype_label"],
-#         outdir = config["directories"]["results"]+"/rna/celltype_proportions"
-#     conda:
-#         "environment.yaml"
-#     log: 
-#         "logs/plot_celltype_proportions.log"
-#     threads: 
-#         config["slurm"]["plot_celltype_proportions"]["threads"]
-#     resources:
-#         mem_mb = config["slurm"]["plot_celltype_proportions"]["memory"]        
-#     shell:
-#         "Rscript {input.script} --metadata {input.metadata} --celltype_label {params.celltype_label} \
-#         --samples {params.plates} --outdir {params.outdir} > {log}"
+rule plot_celltype_proportions: 
+    input:
+        script = config["scripts"]["plot_celltype_proportions"],
+        metadata=rules.parse_mapping_results.output
+    output:
+        expand(config["directories"]["results"]+"/rna/celltype_proportions/celltype_proportions_{sample}_horizontal_barplots.pdf", sample=config["samples"])
+    params:
+        samples = expand("{sample}", sample=config["samples"]),
+        celltype_label = config["params"]["plot_celltype_proportions"]["celltype_label"],
+        outdir = config["directories"]["results"]+"/rna/celltype_proportions"
+    conda:
+        "environment.yaml"
+    log: 
+        "logs/plot_celltype_proportions.log"
+    threads: 
+        config["slurm"]["plot_celltype_proportions"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["plot_celltype_proportions"]["memory"]        
+    shell:
+        "Rscript {input.script} --metadata {input.metadata} --celltype_label {params.celltype_label} \
+        --samples {params.samples} --outdir {params.outdir} > {log}"
