--- a/rna/snakemake/config_ricard_babraham.yaml
+++ b/rna/snakemake/config_ricard_babraham.yaml
@@ -1,15 +1,14 @@
 samples:
-    - E7.5_TET_TKO_KDR+
-    - E7.5_TET_TKO_crispr_rep1
-    - E7.5_TET_TKO_crispr_rep2
-    - E8.5_WT_rep1
-    - E8.5_WT_rep2
-    - E8.5_WT_CD41+_rep1
-    - E8.5_WT_CD41+_rep2
-    - E8.5_TET_TKO_KDR+_CD41+_rep1
-    - E8.5_TET_TKO_KDR+_CD41+_rep2
-    - E8.5_TET_TKO_KDR+_rep1
-    - E8.5_TET_TKO_KDR+_rep2
+    - E7.5_TET_TKO
+    - E7.5_TET_TKO_crispr
+    - E8.5_WT_CD41+
+    - E8.5_TET_TKO_CD41+
+    - E8.5_WT_KDR+
+    - E8.5_TET_TKO_KDR+
+    - E8.5_WT_KDR+_CD41+
+    - E8.5_TET_TKO_KDR+_CD41+
+    - E8.5_WT
+    - E8.5_TET_TKO
 
 plates:
     - E7.5_tet_chimera_plate3
@@ -120,7 +119,7 @@ params:
     #     celltype_label: "celltype.mapped_seurat"
 
     plot_celltype_proportions:
-        celltype_label: "celltype.mapped_mnn"
+        celltype_label: "celltype.mapped"
         # celltype_label: ["celltype.mapped_seurat","celltype.mapped_mnn"]
 
     # plot_mapping_results
